--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "buildCommand": "uvicorn app.main:app --host 0.0.0.0 --port 8000",
+  "outputDirectory": ".",
   "builds": [
     {
       "src": "/app/main.py",
