--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datetime>=5.5",
     "fastapi[standard]>=0.115.13",
+    "pandas>=2.3.0",
+    "requests>=2.32.4",
 ]
